--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="elmansyahfauzifinalproject.mymovies.DetailActivity">
+    tools:context="elmansyahfauzifinalproject.mymovies.views.MovieDetail"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/iv_poster"
@@ -17,7 +17,13 @@
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-
+    <ToggleButton
+        android:layout_below="@id/tv_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tb_add_to_favorite"
+        android:textOn=""
+        android:textOff=""/>
     <TextView
         android:id="@+id/tv_rating"
         android:layout_width="match_parent"
