--- a/app/src/main/res/layout/activity_movie_review.xml
+++ b/app/src/main/res/layout/activity_movie_review.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context="elmansyahfauzifinalproject.mymovies.views.MovieReview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="elmansyahfauzifinalproject.mymovies.MovieReview">
+    >
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:id="@+id/ll_review"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
+
+    </LinearLayout>
+</ScrollView>
