--- a/app/src/main/res/layout/main_detail.xml
+++ b/app/src/main/res/layout/main_detail.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="elmansyahfauzifinalproject.mymovies.Detail"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:layout_height="fill_parent">
 
     <TabHost
         android:id="@android:id/tabhost"
@@ -31,6 +30,18 @@
 
             <!-- android:background="#d8e49c" -->
         </RelativeLayout>
-    </TabHost>
 
-</LinearLayout>
+    </TabHost>
+    <RelativeLayout
+        android:id="@+id/loadingPage"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/cardview_light_background"
+        android:gravity="center" >
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true" />
+    </RelativeLayout>
+</RelativeLayout>
